Fixing div size so that it vertex info div won't overlap bar chart.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -24,7 +24,7 @@
 .fixed-div-upperLeft {
 	position: fixed;
 	top: 150px;
-  bottom: 10px;
+  bottom: 320px;
 	left: 10px;
 }
 
@@ -48,7 +48,7 @@
 .fixed-div {
 	position: fixed;
 	top: 150px;
-  bottom: 10px;
+  bottom: 320px;
 	right: 40px;
 }
 
